# Music-Quiz_CPP

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt
cmake/: GoLang.cmake
cmake/modules/: FindClangFormat.cmake  StaticOpenSSL.cmake  clang-format.cmake
cmake/scripts/: clang-format-check-files.pl
documentation/: INSTALL.md
libraries/: CMakeLists.txt
libraries/youtube/: CMakeLists.txt  HTTPSClient.cpp  HTTPSClient.hpp  StreamInfo.cpp  StreamInfo.hpp  YoutubeDownloadException.hpp  YoutubeDownloader.cpp  YoutubeDownloader.hpp  YoutubeUrlExtractor.cpp  YoutubeUrlExtractor.hpp
libraries/youtube/examples/: CMakeLists.txt  download_example.cpp
src/: CMakeLists.txt
src/common/: Configuration.hpp
src/gui_tools/GuiUtil/ColorPicker/: QHueSlider.hpp
src/gui_tools/MusicQuiz/: main.cpp  stylesheet_musicQuiz.qss
src/gui_tools/QuizCreator/: CMakeLists.txt  CategoryCreator.cpp  CategoryCreator.hpp  LoadCategoryDialog.cpp  LoadCategoryDialog.hpp  QuizCreator.cpp
src/gui_tools/widgets/: LightDeviceConnectedWidget.hpp
src/lightcontrol/client/: CMakeLists.txt  DeviceState.cpp
src/lightcontrol/client/messages/: GlitterMessage.cpp  LightModeMessage.cpp  NodeInfoMessage.cpp  OnBoardLEDStrength.cpp  PendingMessage.hpp  PulseMessage.cpp  (+3 more)
src/media/: AudioPlayer.cpp
src/tests/: test_file.cpp
src/util/: QuizLoader.cpp  QuizLoader.hpp
travis/: build_common.sh  build_linux.sh  build_mac.sh  build_windows.sh  dependencies_arch.sh  dependencies_mac.sh  dependencies_ubuntu.sh
youtube_download_wrapper/: youtube_download_wrapper.go  youtube_wrapper.h
